öka bredden på sökfältet

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             flex-direction: column;
             align-items: center;
             z-index: 2000;
+            width: 60%; /* Ökar bredden av sökfältet */
         }
 
         .input-button-container {
@@ -57,6 +58,7 @@
             color: black;
             outline: none;
             border-radius: 25px 0 0 25px;
+            font-size: 1rem; /* Större textstorlek för bättre läsbarhet */
         }
 
         .input-button-container button {
