--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
         }
 
         input:checked+.slider {
-            background-color: #2196F3;
+            background-color: #03ba11;
             /* Färg när omkopplaren är på */
         }
 
         input:focus+.slider {
-            box-shadow: 0 0 1px #2196F3;
+            box-shadow: 0 0 1px #03ba11;
         }
 
         input:checked+.slider:before {
