försöker åtgärda laoutproblem som uppstod i föregående push

--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
                     <span class="slider round"></span>
                 </label>
             </div>
+            <div class="tag-container"> <!-- Taggarna här --> </div>
         </div>
 
 
