byter ut kontaktformulär och lägger till text vid slider

--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
             <input type="text" id="searchInput" placeholder="Skriv ingredienser eller maträtt och tryck Enter...">
             <button onclick="performSearch()">Sök</button>
             <label class="switch">
+                Veg
                 <input type="checkbox" id="vegSwitch" onchange="toggleVegFilter()">
                 <span class="slider round"></span>
             </label>
