placerar veg texten ovanför veg-slider och inte till vänster om den

--- a/index.html
+++ b/index.html
@@ -353,17 +353,24 @@
             border-radius: 50%;
         }
 
+        .veg-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-left: 10px;
+            /* Justera detta värde efter behov */
+        }
+
         .veg-label {
             background-color: rgba(0, 0, 0, 0.7);
             /* Svart med lite transparens */
             color: white;
             padding: 5px;
-            margin-bottom: 10px;
-            /* Skapar utrymme mellan etiketten och slidern */
+            margin-bottom: 5px;
+            /* Uttrymme mellan etiketten och slidern */
             text-align: center;
             border-radius: 5px;
         }
-        
     </style>
 </head>
 
@@ -379,11 +386,15 @@
         <div class="input-button-container">
             <input type="text" id="searchInput" placeholder="Skriv ingredienser eller maträtt och tryck Enter...">
             <button onclick="performSearch()">Sök</button>
-            <div class="veg-label">Veg</div>
-            <label class="switch">
-                <input type="checkbox" id="vegSwitch" onchange="toggleVegFilter()">
-                <span class="slider round"></span>
-            </label>
+
+            <div class="veg-container">
+                <div class="veg-label">Veg</div>
+                <label class="switch">
+                    <input type="checkbox" id="vegSwitch" onchange="toggleVegFilter()">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+
         </div>
         <div class="tag-container"> <!-- Taggarna här --> </div>
     </div>
