ändra ordet veg till bara veg ovanför veg slidern

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <button onclick="performSearch()">Sök</button>
 
             <div class="veg-container">
-                <div class="veg-label">Veg</div>
+                <div class="veg-label">Bara Veg</div>
                 <label class="switch">
                     <input type="checkbox" id="vegSwitch" onchange="toggleVegFilter()">
                     <span class="slider round"></span>
