--- a/index.html
+++ b/index.html
@@ -42,17 +42,19 @@
             flex-direction: column;
             align-items: center;
             z-index: 2000;
-            width: 40%;
-            /* Ökar bredden av sökfältet */
+            width: 60%;
+            /* Ökad från 40% till 60% */
         }
 
         .input-button-container {
             display: flex;
+            align-items: center;
             width: 100%;
+            /* Använd hela bredden inom search-container */
         }
 
         .input-button-container input[type='text'] {
-            flex-grow: 1;
+            flex-grow: 2;
             padding: 10px;
             border: 1px solid #ddd;
             background-color: white;
@@ -353,32 +355,17 @@
             border-radius: 50%;
         }
 
-        .veg-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-left: 10px;
-            /* Justera detta värde efter behov */
-        }
-
-        .veg-label {
-            background-color: rgba(0, 0, 0, 0.7);
-            /* Svart med lite transparens */
-            color: white;
-            padding: 5px;
-            margin-bottom: 5px;
-            /* Uttrymme mellan etiketten och slidern */
-            text-align: center;
-            border-radius: 5px;
-        }
-
+        .veg-container,
         .lang-container {
+            flex-grow: 1;
+            /* Minskar utrymmet som dessa element tar */
             display: flex;
             flex-direction: column;
             align-items: center;
             margin-left: 10px;
         }
 
+        .veg-label,
         .lang-label {
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
@@ -387,6 +374,7 @@
             text-align: center;
             border-radius: 5px;
         }
+        
     </style>
 </head>
 
