--- a/index.html
+++ b/index.html
@@ -355,17 +355,32 @@
             border-radius: 50%;
         }
 
-        .veg-container,
+        .veg-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-left: 10px;
+            /* Justera detta värde efter behov */
+        }
+
+        .veg-label {
+            background-color: rgba(0, 0, 0, 0.7);
+            /* Svart med lite transparens */
+            color: white;
+            padding: 5px;
+            margin-bottom: 5px;
+            /* Uttrymme mellan etiketten och slidern */
+            text-align: center;
+            border-radius: 5px;
+        }
+
         .lang-container {
-            flex-grow: 1;
-            /* Minskar utrymmet som dessa element tar */
             display: flex;
             flex-direction: column;
             align-items: center;
             margin-left: 10px;
         }
 
-        .veg-label,
         .lang-label {
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
@@ -374,7 +389,6 @@
             text-align: center;
             border-radius: 5px;
         }
-        
     </style>
 </head>
 
