--- a/index.html
+++ b/index.html
@@ -42,19 +42,17 @@
             flex-direction: column;
             align-items: center;
             z-index: 2000;
-            width: 60%;
-            /* Ökad från 40% till 60% */
+            width: 40%;
+            /* Ökar bredden av sökfältet */
         }
 
         .input-button-container {
             display: flex;
-            align-items: center;
             width: 100%;
-            /* Använd hela bredden inom search-container */
         }
 
         .input-button-container input[type='text'] {
-            flex-grow: 2;
+            flex-grow: 1;
             padding: 10px;
             border: 1px solid #ddd;
             background-color: white;
