lägger till all rights reserved i footer

--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
 
     <div id="data-container"></div>
     <div class="footer-banner">
+        <div class="copyright">&copy; 2023-Tallriken. All rights reserved.</div>
         <!-- Footer content -->
         <!-- Innehåll för din banner, t.ex. Om Oss och Tipsa Oss länkar -->
     </div>
