--- a/index.html
+++ b/index.html
@@ -197,13 +197,15 @@
         /* Lägg till den nya CSS-koden för footer-banner här */
         .footer-banner {
             background-color: #000;
-            /* Eller någon annan färg som passar din design */
             color: white;
             text-align: center;
-            padding: 10px 0;
+            padding: 10px 20px;
             position: fixed;
             bottom: 0;
             width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .footer-banner a {
@@ -214,6 +216,16 @@
 
         .footer-banner a:hover {
             text-decoration: underline;
+        }
+
+        .footer-links {
+            display: flex;
+        }
+
+        /* Ny stil för copyright-texten */
+        .footer-banner p {
+            margin: 0;
+            color: white;
         }
 
         .tag-container {
@@ -427,7 +439,6 @@
 
     <div id="data-container"></div>
     <div class="footer-banner">
-        <div class="copyright">&copy; 2023-Tallriken. All rights reserved.</div>
         <!-- Footer content -->
         <!-- Innehåll för din banner, t.ex. Om Oss och Tipsa Oss länkar -->
     </div>
@@ -584,9 +595,12 @@
 
     <script async src="//www.instagram.com/embed.js"></script>
 
-    <div class="footer-banner" style="text-align: center; padding: 20px;">
-        <a href="omoss.html" style="color: white; margin-right: 10px;">Om Oss</a>
-        <a href="tipsaoss.html" style="color: white;">Tipsa Oss</a>
+    <div class="footer-banner">
+        <p class="copyright">&copy; 2023-Tallriken. All rights reserved.</p>
+        <div class="footer-links">
+            <a href="omoss.html">Om Oss</a>
+            <a href="tipsaoss.html">Tipsa Oss</a>
+        </div>
     </div>
 </body>
 
