flyttar tillbaka om oss och tipsa oss flikar till mitten av footer

--- a/index.html
+++ b/index.html
@@ -220,12 +220,17 @@
 
         .footer-links {
             display: flex;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
         }
 
-        /* Ny stil för copyright-texten */
+        /* Stil för copyright-texten */
         .footer-banner p {
             margin: 0;
             color: white;
+            flex-grow: 1;
+            text-align: left;
         }
 
         .tag-container {
